<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".activity.OnBoardActivity">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:src="@drawable/logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_above="@id/linear_bottom">

        <Button
            android:id="@+id/sign_in"
            style="@style/ButtonPrimary"
            android:text="@string/log_in"/>

        <Button
            android:id="@+id/sign_up"
            style="@style/ButtonSecondary"
            android:text="@string/sign_up"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:layout_marginBottom="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_uko"
            style="@style/TextLabel"
            android:textSize="@dimen/text_16"/>

        <TextView
            android:id="@+id/tv_explore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/explore"
            style="@style/TextLabel"
            android:textSize="@dimen/text_16"
            android:textColor="@color/white"
            android:layout_marginLeft="5dp"/>

    </LinearLayout>

</RelativeLayout>