<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity"
    android:background="@color/white"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_header"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="50dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/co_living"
                    android:textSize="@dimen/text_16"
                    android:gravity="center"
                    style="@style/TextLabel"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_uko"
                    android:textSize="@dimen/text_32"
                    android:gravity="center"
                    style="@style/TextLabel"
                    android:textColor="@color/black"
                    android:layout_marginTop="20dp"/>
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="15dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ed_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:inputType="textEmailAddress"
                        android:hint="@string/email"
                        style="@style/TextLabel"
                        android:imeOptions="actionNext"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ed_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:inputType="textPassword"
                        android:hint="@string/password"
                        style="@style/TextLabel"
                        android:imeOptions="actionDone"/>

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tv_forgot_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/forgot_password"
                    style="@style/TextLabel"
                    android:selectAllOnFocus="false"
                    android:linksClickable="false"
                    android:autoLink="all"
                    android:paddingLeft="3dp"
                    android:textColor="#707070"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="30dp"/>

                <Button
                    android:id="@+id/btn_login"
                    style="@style/ButtonPrimary"
                    android:text="@string/log_in"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_explore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_uko"
                    style="@style/TextLabel"
                    android:textSize="@dimen/text_15"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/explore"
                    style="@style/TextLabel"
                    android:textSize="@dimen/text_15"
                    android:layout_marginLeft="5dp"/>

            </LinearLayout>



        </LinearLayout>

    </ScrollView>

</LinearLayout>