<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".activity.CompleteProfileActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_header"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="15dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/TextLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/live_with_uko"
                android:textColor="#434242"
                android:textSize="@dimen/text_16" />

            <TextView
                style="@style/TextLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:paddingLeft="80dp"
                android:paddingRight="80dp"
                android:text="@string/love_get_contact"
                android:textColor="@color/black"
                android:textSize="@dimen/text_32" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_first_name"
                    style="@style/TextLabel"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:hint="@string/first_name"
                    android:imeOptions="actionNext"
                    android:inputType="textWebEmailAddress"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_last_name"
                    style="@style/TextLabel"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:hint="@string/last_name"
                    android:imeOptions="actionNext"
                    android:inputType="textWebEmailAddress"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_phone"
                    style="@style/TextLabel"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:hint="@string/phone_number"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:textSize="14sp"
                    android:maxLength="10"/>

            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:layout_marginTop="10dp"
                android:id="@+id/gender_div">

                <TextView
                    android:id="@+id/txtGender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Gender"
                    style="@style/TextLabel"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/text_13"
                    android:paddingLeft="4dp"/>

                <Spinner
                    android:id="@+id/spin_gender"
                    android:layout_width="match_parent"
                    android:layout_height="43dp"
                    android:drawSelectorOnTop="true"
                    android:prompt="@string/location"
                    android:layout_below="@id/txtGender"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1.2dp"
                    android:background="#ADA6A6"
                    android:layout_below="@id/spin_gender"
                    android:layout_alignParentBottom="true"/>

            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_country"
                    style="@style/TextLabel"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:hint="@string/country_region"
                    android:imeOptions="actionNext"
                    android:inputType="textWebEmailAddress"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_birth_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_birth"
                    style="@style/TextLabel"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:hint="@string/date_birth"
                    android:imeOptions="actionNext"
                    android:inputType="date"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_employment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_employment"
                    style="@style/TextLabel"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:hint="@string/employment"
                    android:imeOptions="actionNext"
                    android:inputType="textWebEmailAddress"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:id="@+id/location_div">

                <Spinner
                    android:id="@+id/spin_location"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:drawSelectorOnTop="true"
                    android:prompt="@string/location"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1.2dp"
                    android:background="#ADA6A6"
                    android:layout_below="@id/spin_location"/>

            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_facebook"
                    style="@style/TextLabel"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:hint="@string/facebook_id"
                    android:imeOptions="actionNext"
                    android:inputType="textWebEmailAddress"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_qualification"
                    style="@style/TextLabel"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:hint="@string/education"
                    android:imeOptions="actionDone"
                    android:inputType="textWebEmailAddress"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <Button
                android:id="@+id/btn_continue"
                style="@style/ButtonPrimary"
                android:text="@string/continue_" />

            <View
                android:layout_width="match_parent"
                android:layout_height="50dp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>