<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp">

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:src="@drawable/warning"
            android:scaleType="fitXY"
            android:layout_gravity="center_horizontal"/>


        <TextView
            android:id="@+id/txt_profile_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_not_verified"
            style="@style/TextLabel"
            android:textSize="@dimen/text_28"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="40dp"/>

        <TextView
            android:id="@+id/txt_profile_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_profile_not_verified"
            style="@style/TextLabel"
            android:textSize="@dimen/text_16"
            android:gravity="center"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="15dp"
            android:lineSpacingExtra="5dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="30dp"/>

        <LinearLayout
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">
            <Button
                android:id="@+id/btn_okay"
                style="@style/ButtonPrimary"
                android:text="@string/okay" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>